@@ -26,6 +26,8 @@
 - DinkC console is toggled when Alt-C is pressed (no more creating a
   key-xx.c with just "show_console()" inside).
 
+- load_palette() now searches for palette in the right place
+
 - New translation for the engine strings in Russian
   (thanks Yuri Kozlov)
 
